--- a/game.html
+++ b/game.html
@@ -7,20 +7,35 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
     </head>
     <body>
-        <div id="titleBox"> 
-            <h1>90'smart!</h1>
-            <h4>90's kids will remember... i alredy know!</h4>
-        </div><br>
-        <div class="game_container">
-            <br>
+        <div class="row">
+        <div class="col-1"></div>
+        <div id="titleBox" class="col-10"> 
+            <h1 id="title">90'smart!</h1>
+            <h4>90's kids will remember... i already know!</h4>
+            <a href="https://github.com/samuelpg/90-smart">Github</a>
+        </div>
+        <div class="col-1"></div>
+        </div>
+		
+		<div class="row">
+		<div class="col-1"></div>
+		<div class="mainComputer col-3">
+            <div class="screen">
+                <img ng-src="{{ image }}" class="screen_img">
+            </div>
+            <h2> 90'smart </h2>
+        </div>
+		<div class="col-1"></div>
+        <div class="game_container col-6">
             <div class="question_container">
                 <h2 id="question"> QUESTION PLACEHOLDER </h2>
             </div>
             <div class="buttons_container">
-                <button id="yes_button"> Yes </button>
-                <button id="no_button"> No </button>
+                <button class="yes_button"> Yes </button>
+                <button class="no_button"> No </button>
             </div>
-            <br>
         </div>
+		<div class="col-1"></div>
+		</div>
     </body>
 </html>
