--- a/game.html
+++ b/game.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html>
+<html ng-app="myApp">
     <head>
         <title>90'smart</title>
         <link rel='stylesheet' href="style.css">
-        <script type="text/javascript" src="server.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    
+        <script src="js/angular.min.js" type="text/javascript"></script>
+		<script src="/js/app.js" type="text/javascript"></script>
     </head>
     <body>
         <div class="row">
@@ -27,12 +29,16 @@
         </div>
 		<div class="col-1"></div>
         <div class="game_container col-6">
-            <div class="question_container">
-                <h2 id="question"> QUESTION PLACEHOLDER </h2>
+            <div class="question_container" ng-controller = "QuestionsController as QuesCtrl">
+                <h2 id="question"> {{interrogante}}</h2>
             </div>
-            <div class="buttons_container">
-                <button class="yes_button"> Yes </button>
-                <button class="no_button"> No </button>
+            <div class="buttons_container" ng-controller="AnswerController">
+                <button class="yes_button"  ng-click="setYes()">
+                    <span id="yes_text">Yes</span> 
+                </button>
+                <button class="no_button" ng-click="setNo()">
+                    <span id="no_text">No</span>
+                </button>
             </div>
         </div>
 		<div class="col-1"></div>
